--- a/GNSS仿真原理与实现/05-信号调制.md
+++ b/GNSS仿真原理与实现/05-信号调制.md
@@ -1,22 +1,11 @@
-<p align="center">
-  <img src="https://img.icons8.com/dusk/64/oscillation.png" alt="Modulation" width="80"/>
-  <br>
-  <strong>GNSS 信号调制技术</strong>
-</p>
-<h1 align="center">
-  📡 📶 🤖
-  <br>
-  原理、公式与实现
-</h1>
+# <div style="text-align: center;">📶 🤖 GNSS 信号调制技术原理、公式与实现</div>
 
-<p align="center">
-  <img src="https://img.shields.io/badge/领域-GNSS%20物理层-blue.svg" alt="Field"/>
-  <img src="https://img.shields.io/badge/内容-信号调制|扩频|多路复用-yellowgreen.svg" alt="Topic"/>
-  <img src="https://img.shields.io/badge/系统-GPS|Galileo|BDS|GLONASS-orange.svg" alt="Systems"/>
-  <img src="https://img.shields.io/badge/难度-进阶-red.svg" alt="Difficulty"/>
+<p align="center"> 
+    <img src="https://img.shields.io/badge/领域-GNSS%20物理层-blue.svg" alt="Field"/> 
+    <img src="https://img.shields.io/badge/内容-信号调制|扩频|多路复用-yellowgreen.svg" alt="Topic"/> 
+    <img src="https://img.shields.io/badge/系统-GPS|Galileo|BDS|GLONASS-orange.svg" alt="Systems"/> 
+    <img src="https://img.shields.io/badge/难度-进阶-red.svg" alt="Difficulty"/> 
 </p>
-
----
 
 ## 📖 目录
 
