--- a/GNSS仿真原理与实现/02-时间系统.md
+++ b/GNSS仿真原理与实现/02-时间系统.md
@@ -1,17 +1,42 @@
 <div align="center">
     <a name="Top"></a>
 	<h1>导航算法常用的时间系统</h1>
-    <img alt="Static Badge" src="https://img.shields.io/badge/QQ-1482275402-red">
-    <img alt="Static Badge" src="https://img.shields.io/badge/%E5%BE%AE%E4%BF%A1-lizhengxiao99-green">
-    <img alt="Static Badge" src="https://img.shields.io/badge/Email-dauger%40126.com-brown">
-    <a href="https://blog.csdn.net/daoge2666/"><img src="https://img.shields.io/badge/CSDN-论坛-c32136" /></a>
-    <a href="https://www.zhihu.com/people/dao-ge-92-60/"><img src="https://img.shields.io/badge/Zhihu-知乎-blue" /></a>
-    <img src="https://komarev.com/ghpvc/?username=LiZhengXiao99&label=Views&color=0e75b6&style=flat" alt="访问量统计" />
+    <img src="https://img.shields.io/badge/状态-维护中-brightgreen.svg" alt="Status"/> <img src="https://img.shields.io/badge/领域-GNSS%20系统仿真-blue.svg" alt="Field"/> <img src="https://img.shields.io/badge/内容-原理|架构|流程-yellowgreen.svg" alt="Topic"/> <img src="https://img.shields.io/badge/难度-综述-yellow.svg" alt="Difficulty"/> 
 </div>
 
-<br/>
+## 目录
 
-[TOC]
+- [1. 概述](#1-概述)
+- [2. 基本时间系统](#2-基本时间系统)
+  - [2.1 恒星时（Sidereal Time, ST）](#21-恒星时sidereal-time-st)
+  - [2.2 太阳时](#22-太阳时)
+    - [2.2.1 真太阳时](#221-真太阳时)
+    - [2.2.2 平太阳时](#222-平太阳时)
+  - [2.3 世界时（Universal Time, UT）](#23-世界时universal-time-ut)
+  - [2.4 原子时（Atomic Time, AT）](#24-原子时atomic-time-at)
+  - [2.5 国际原子时（International Atomic Time, TAI）](#25-国际原子时international-atomic-time-tai)
+  - [2.6 协调世界时（Coordinated Universal Time, UTC）](#26-协调世界时coordinated-universal-time-utc)
+- [3. GNSS时间系统](#3-gnss时间系统)
+  - [3.1 GPS时间（GPST）](#31-gps时间gpst)
+  - [3.2 北斗时间（BDT）](#32-北斗时间bdt)
+  - [3.3 GLONASS时间（GLST）](#33-glonass时间glst)
+  - [3.4 Galileo时间（GST）](#34-galileo时间gst)
+- [4. 时间表示与转换](#4-时间表示与转换)
+  - [4.1 儒略日（Julian Day, JD）](#41-儒略日julian-day-jd)
+  - [4.2 简化儒略日（Modified Julian Day, MJD）](#42-简化儒略日modified-julian-day-mjd)
+  - [4.3 年积日（Day of Year, DOY）](#43-年积日day-of-year-doy)
+  - [4.4 周内时间表示](#44-周内时间表示)
+- [5. 时间系统转换](#5-时间系统转换)
+  - [5.1 时间系统关系](#51-时间系统关系)
+  - [5.2 实用转换公式](#52-实用转换公式)
+- [6. 编程实现注意事项](#6-编程实现注意事项)
+  - [6.1 时间处理库](#61-时间处理库)
+  - [6.2 精度问题](#62-精度问题)
+  - [6.3 时区处理](#63-时区处理)
+  - [6.4 闰秒处理](#64-闰秒处理)
+- [7. 总结](#7-总结)
+
+<br/>
 
 ## 1. 概述
 
